@@ -1,6 +1,7 @@
 2010-05-01 Dusan Jocic <dusanjocic@msn.com>
 	* [GLSL] Misc fixes
 	* [Server] Fixed crash with allocate snapshot entities 
+	* [Community Server] Allow community server only for Windows build until we get working MySQL for Linux
 
 2010-04-30 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Consolidation of engine and renderer convars
